# swift-on-embedded-experiments

./: .gitignore  README.md
pico_motion_detection/: BridgingHeader.h  CMakeLists.txt  Main.swift  PinController.swift  README.md
pico_switch_led/: BridgingHeader.h  CMakeLists.txt  Main.swift  PinController.swift  README.md
pico_ws2812b_neopixel/: BridgingHeader.h  CMakeLists.txt  Colors.swift  LEDStrip.swift  Main.swift  README.md
pico_ws2812b_neopixel/neopixel_lb/: CMakeLists.txt  ws2812.c  ws2812.h  ws2812.pio
